[package]
name = "arcropolis"
version = "0.9.4"
authors = ["Raytwo <raytwost@gmail.com>, jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.11"
toml = "0.5.6"
semver = "0.11.0"
lazy_static = "1.4"
owo-colors = "1.0.3"
parking_lot = "0.11.0"
serde = { version = "1", features = ["derive"] }
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
skyline-update = { git = "https://github.com/skyline-rs/skyline-update" }
arcropolis-api = { path = "../arcropolis_api" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
